libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-literal.jsonc
//@ run: fail
//@ description: importing a literal should fail
[
  "::kernel::special_form::use",
  "::math",
  { "#literal": 1 },
  //~^ ERROR expected `*`, a tuple of names, or a struct of aliases
  "x"
  //~^ ERROR cannot find value `x` in this scope
]
